Upgraded to Java 17 and Micronaut 3.8.0 (#229)
* Split API and CLI (#227)

* Split API and CLI

* Update README.md

* Update README.md

* Fix Sonar

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Fix Sonar

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update

* Update README.md

* Update README.md

* Update README.md

* Update

* Add build step in pull and push actions

* Java 17

* Upgrade

* Upgrade

* Upgrade

* Upgrade

* Upgrade

* Upgrade

* Upgrade

* Upgrade

* Fixed test

* Split API and CLI (#227)

* Split API and CLI

* Update README.md

* Update README.md

* Fix Sonar

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Fix Sonar

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update

* Update README.md

* Update README.md

* Update README.md

* Update

* Upgrade

* Rollback testcontainers kafka

* Fix upgrade

* Enforce testcontainers kafka version

* Fixed inject

* Fixed docker tests

* Fixed docker tests

* Fixed docker tests

* Fixed docker tests

* Disabled dev profile