@@ -1,18 +1,18 @@
 package com.michelin.ns4kafka.services;
 
+import com.michelin.ns4kafka.config.KafkaAsyncExecutorConfig;
 import com.michelin.ns4kafka.models.AccessControlEntry;
 import com.michelin.ns4kafka.models.Namespace;
 import com.michelin.ns4kafka.models.Topic;
 import com.michelin.ns4kafka.repositories.TopicRepository;
-import com.michelin.ns4kafka.config.KafkaAsyncExecutorConfig;
 import com.michelin.ns4kafka.services.executors.TopicAsyncExecutor;
 import io.micronaut.context.ApplicationContext;
 import io.micronaut.inject.qualifiers.Qualifiers;
+import jakarta.inject.Inject;
+import jakarta.inject.Singleton;
 import org.apache.kafka.clients.admin.RecordsToDelete;
 import org.apache.kafka.common.TopicPartition;
 
-import javax.inject.Inject;
-import javax.inject.Singleton;
 import java.util.*;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeoutException;
@@ -22,27 +22,15 @@ import static org.apache.kafka.common.config.TopicConfig.*;
 
 @Singleton
 public class TopicService {
-    /**
-     * The topic repository
-     */
     @Inject
     TopicRepository topicRepository;
 
-    /**
-     * The ACL service
-     */
     @Inject
     AccessControlEntryService accessControlEntryService;
 
-    /**
-     * The application context
-     */
     @Inject
     ApplicationContext applicationContext;
 
-    /**
-     * The managed cluster config
-     */
     @Inject
     List<KafkaAsyncExecutorConfig> kafkaAsyncExecutorConfig;
 
@@ -78,7 +66,7 @@ public class TopicService {
                     }
                     return false;
                 }))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -145,7 +133,7 @@ public class TopicService {
                     // this topic could be created on ns4kafka during "import" step
                     .filter(clusterTopic -> !topic.getMetadata().getName().equals(clusterTopic))
                     .filter(clusterTopic -> hasCollision(clusterTopic, topic.getMetadata().getName()))
-                   .collect(Collectors.toList());
+                    .toList();
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
             throw new InterruptedException(e.getMessage());
@@ -236,7 +224,7 @@ public class TopicService {
                 .filter(topic -> isNamespaceOwnerOfTopic(namespace.getMetadata().getName(), topic))
                 // ...and aren't in ns4kafka storage
                 .filter(topic -> findByName(namespace, topic).isEmpty())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
